--- a/refs.bib
+++ b/refs.bib
@@ -690,6 +690,15 @@
     volume = {917},
     doi = {10.1016/j.tcs.2022.03.014}
 }
+@article{lai15,
+    title = {Paths and cycles identifying vertices in twisted cubes},
+    author = {P. L. Lai},
+    journal = {Applied Mathematics and Computation},
+    year = {2015},
+    pages = {620--627},
+    volume = {259},
+    doi = {10.1016/j.amc.2015.02.090}
+}
 @article{jean23,
     title = {Optimal error-detecting open-locating-dominating set on the infinite triangular grid},
     author = {D. C. Jean and S. J. Seo},
@@ -863,6 +872,15 @@
     number = {1},
     doi = {10.1016/j.disc.2018.10.002}
 }
+@article{junn15,
+    title = {Optimal locating-total dominating sets in strips of height 3},
+    author = {V. Junnila},
+    journal = {Discussiones Mathematicae Graph Theory},
+    year = {2015},
+    pages = {447--462},
+    volume = {35},
+    doi = {10.7151/dmgt.1805}
+}
 @article{fouc20q,
     title = {Domination and location in twin-free digraphs},
     author = {F. Foucaud and S. Heydarshahi and A. Parreau},
@@ -909,6 +927,52 @@
     pages = {203--213},
     volume = {121},
     doi = {10.1016/S0166-218X(01)00248-7}
+}
+@article{gheb13,
+    title = {Locating and identifying codes in circulant networks},
+    author = {M. Ghebleh and L. Niepel},
+    journal = {Discrete Applied Mathematics},
+    year = {2013},
+    pages = {2001--2007},
+    volume = {161},
+    doi = {10.1016/j.dam.2013.03.008}
+}
+@article{junn12,
+    title = {Adaptive identification of sets of vertices in graphs},
+    author = {V. Junnila},
+    journal = {Discrete Mathematics and Theoretical Computer Science},
+    year = {2012},
+    pages = {69--86},
+    volume = {14},
+    number = {1},
+    doi = {10.46298/dmtcs.574}
+}
+@article{grav05,
+    title = {Construction of codes identifying sets of vertices},
+    author = {S. Gravier and J. Moncel},
+    journal = {Electronic Journal of Combinatorics},
+    year = {2005},
+    volume = {12},
+    number = {1},
+    doi = {10.37236/1910}
+}
+@article{ghorm21,
+    title = {On the watching number of graphs using discharging procedure},
+    author = {M. Ghorbani and S. Maddah},
+    journal = {Journal of Applied Mathematics and Computing},
+    year = {2021},
+    pages = {507--518},
+    volume = {67},
+    doi = {10.1007/s12190-020-01482-w}
+}
+@article{henn12c,
+    title = {Locating-total domination in claw-free cubic graphs},
+    author = {M. A. Henning and C. L\"{o}wenstein},
+    journal = {Discrete Mathematics},
+    year = {2012},
+    pages = {3107--3116},
+    volume = {312},
+    doi = {10.1016/j.disc.2012.06.024}
 }
 
 
@@ -2014,14 +2078,6 @@
     pages = {191--200},
     volume = {65}
 }
-@article{finb21,
-    title = {The complexity of monitoring a network with both watchers and listeners},
-    author = {A. S. Finbow and B. L. Hartnell and J. R. Young},
-    journal = {Journal of Combinatorial Mathematics and Combinatorial Computing},
-    year = {2021},
-    pages = {233--244},
-    volume = {116}
-}
 @mastersthesis{fouc09,
     title = {Identifying codes in special graph classes},
     author = {F. Foucaud},
@@ -2229,14 +2285,6 @@
     pages = {33--56},
     volume = {12}
 }
-@article{gheb13,
-    title = {Locating and identifying codes in circulant networks},
-    author = {M. Ghebleh and L. Niepel},
-    journal = {Discrete Applied Mathematics},
-    year = {2013},
-    pages = {2001--2007},
-    volume = {161}
-}
 @article{ghor20,
     title = {The watching system as a generalization of identifying code},
     author = {M. Ghorbani and M. Dehmer and H. Maimani and S. Maddah and M. Rooz\-bayani and F. Emmert-streib},
@@ -2244,14 +2292,6 @@
     year = {2020},
     pages = {7},
     volume = {380}
-}
-@article{ghorm21,
-    title = {On the watching number of graphs using discharging procedure},
-    author = {M. Ghorbani and S. Maddah},
-    journal = {Journal of Applied Mathematics and Computing},
-    year = {2021},
-    pages = {507--518},
-    volume = {67}
 }
 @article{gimb01,
     title = {Location with dominating sets},
@@ -2333,14 +2373,6 @@
     pages = {181--188},
     volume = {69}
 }
-@article{grav05,
-    title = {Construction of codes identifying sets of vertices},
-    author = {S. Gravier and J. Moncel},
-    journal = {Electronic Journal of Combinatorics},
-    year = {2005},
-    volume = {12},
-    number = {1}
-}
 @article{grav04,
     title = {On graphs having a $V \setminus \{ x \}$ set as an identifying code},
     author = {S. Gravier and J. Moncel},
@@ -2356,14 +2388,6 @@
     year = {2006},
     pages = {767--776},
     volume = {27}
-}
-@article{grav08b,
-    title = {Identifying codes of Cartesian product of two cliques of the same size},
-    author = {S. Gravier and J. Moncel and A. Semri},
-    journal = {Electronic Journal of Combinatorics},
-    year = {2008},
-    volume = {15},
-    number = {1}
 }
 @article{grav16,
     title = {Identifying codes in vertex-transitive graphs and strongly regular graphs},
@@ -2460,14 +2484,6 @@
     year = {2016},
     pages = {1405--1416},
     volume = {31}
-}
-@article{henn12c,
-    title = {Locating-total domination in claw-free cubic graphs},
-    author = {M. A. Henning and C. L\"{o}wenstein},
-    journal = {Discrete Mathematics},
-    year = {2012},
-    pages = {3107--3116},
-    volume = {312}
 }
 @article{henn04,
     title = {Metric-locating-dominating sets in graphs},
@@ -2764,14 +2780,6 @@
     pages = {125},
     address = {Turku, Finland}
 }
-@article{junn12,
-    title = {Adaptive identification of sets of vertices in graphs},
-    author = {V. Junnila},
-    journal = {Discrete Mathematics and Theoretical Computer Science},
-    year = {2012},
-    pages = {69--86},
-    volume = {14}
-}
 @article{junn13,
     title = {New lower bound for 2-identifying code in the square grid},
     author = {V. Junnila},
@@ -2779,14 +2787,6 @@
     year = {2013},
     pages = {2042--2051},
     volume = {161}
-}
-@article{junn15,
-    title = {Optimal locating-total dominating sets in strips of height 3},
-    author = {V. Junnila},
-    journal = {Discussiones Mathematicae Graph Theory},
-    year = {2015},
-    pages = {447--462},
-    volume = {35}
 }
 @article{junn11,
     title = {Identification in $Z^2$ using Euclidean balls},
@@ -2982,14 +2982,6 @@
     year = {2015},
     pages = {139--144},
     volume = {193}
-}
-@article{lai15,
-    title = {Paths and cycles identifying vertices in twisted cubes},
-    author = {P. L. Lai},
-    journal = {Applied Mathematics and Computation},
-    year = {2015},
-    pages = {620--627},
-    volume = {259}
 }
 @phdthesis{laif07b,
     title = {Coding for network applications: robust identification and distributed resource allocation},
@@ -4424,4 +4416,20 @@
     year = {2006},
     pages = {72},
     address = {Tennessee, USA}
+}
+@article{grav08b,
+    title = {Identifying codes of Cartesian product of two cliques of the same size},
+    author = {S. Gravier and J. Moncel and A. Semri},
+    journal = {Electronic Journal of Combinatorics},
+    year = {2008},
+    volume = {15},
+    number = {1}
+}
+@article{finb21,
+    title = {The complexity of monitoring a network with both watchers and listeners},
+    author = {A. S. Finbow and B. L. Hartnell and J. R. Young},
+    journal = {Journal of Combinatorial Mathematics and Combinatorial Computing},
+    year = {2021},
+    pages = {233--244},
+    volume = {116}
 }
