--- a/refs.bib
+++ b/refs.bib
@@ -974,6 +974,121 @@
     volume = {312},
     doi = {10.1016/j.disc.2012.06.024}
 }
+@article{junn20o,
+    title = {Tolerant location detection in sensor networks},
+    author = {V. Junnila and T. Laihonen},
+    journal = {Advances in Applied Mathematics},
+    year = {2020},
+    volume = {112},
+    doi = {10.1016/j.aam.2019.101938}
+}
+@article{grav04b,
+    title = {Identifying codes of cycles},
+    author = {S. Gravier and J. Moncel and A. Semri},
+    journal = {European Journal of Combinatorics},
+    year = {2006},
+    pages = {767--776},
+    volume = {27},
+    doi = {10.1016/j.ejc.2004.09.005}
+}
+@article{honk03b,
+    title = {On the identification of sets of points in the square lattice},
+    author = {I. Honkala and T. Laihonen},
+    journal = {Discrete and Computational Geometry},
+    year = {2003},
+    pages = {139--152},
+    volume = {29},
+    doi = {10.1007/s00454-002-0730-2}
+}
+@article{fouc11,
+    title = {Characterizing extremal digraphs for identifying codes and extremal cases of Bondy's theorem on induced subsets},
+    author = {F. Foucaud and R. Naserasr and and A. Parreau},
+    journal = {Graphs and Combinatorics},
+    year = {2013},
+    pages = {463--473},
+    volume = {29},
+    doi = {10.1007/s00373-012-1136-4}
+}
+@article{chan14,
+    title = {Choice identification of a graph},
+    author = {T. P. Chang and L. D. Tong},
+    journal = {Discrete Applied Mathematics},
+    year = {2014},
+    pages = {61--71},
+    volume = {167},
+    doi = {10.1016/j.dam.2013.12.003}
+}
+@article{fouc11b,
+    title = {On the size of identifying codes in triangle-free graphs},
+    author = {F. Foucaud and R. Klasing and A. Kosowski and A. Raspaud},
+    journal = {Discrete Applied Mathematics},
+    year = {2012},
+    pages = {1532--1546},
+    volume = {160},
+    doi = {10.1016/j.dam.2012.02.009}
+}
+@article{haka20k,
+    title = {The solid-metric dimension},
+    author = {A. Hakanen and V. Junnila and T. Laihonen},
+    journal = {Theoretical Computer Science},
+    year = {2020},
+    pages = {156--170},
+    volume = {806},
+    doi = {10.1016/j.tcs.2019.02.013}
+}
+@article{fouc16,
+    title = {Location-domination and matching in cubic graphs},
+    author = {F. Foucaud and M. A. Henning},
+    journal = {Discrete Mathematics},
+    year = {2016},
+    pages = {1221--1231},
+    volume = {339},
+    doi = {10.1016/j.disc.2015.11.016}
+}
+@article{Echa06,
+    title = {Discriminating codes in bipartite graphs},
+    author = {E. Charbit and I. Charon and G. Cohen and O. Hudry},
+    journal = {Electronic Notes in Discrete Mathematics},
+    year = {2006},
+    pages = {29--35},
+    volume = {26},
+    doi = {10.1016/j.endm.2006.08.005}
+}
+@article{fouc13c,
+    title = {Identifying path covers in graphs},
+    author = {F. Foucaud and M. Kov$\check{\textrm{s}}$e},
+    journal = {Journal of Discrete Algorithms},
+    year = {2013},
+    pages = {21--34},
+    volume = {23},
+    doi = {10.1016/j.jda.2013.07.006}
+}
+@article{hede15,
+    title = {On identifying codes in the Cartesian product of a path and a complete graph},
+    author = {J. Hedetniemi},
+    journal = {Journal of Combinatorial Optimization},
+    year = {2016},
+    pages = {1405--1416},
+    volume = {31},
+    doi = {10.1007/s10878-015-9830-9}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1462,15 +1577,6 @@
     volume = {21},
     number = {2}
 }
-@article{cano13,
-    title = {Determining the intruders location in a given network: Locating-dominating sets in a graph},
-    author = {S. R. Canoy, Jr. and G. A. Malacas},
-    journal = {NCRP Research Journal},
-    year = {2013},
-    pages = {1--8},
-    volume = {13},
-    number = {1}
-}
 @article{cano15,
     title = {Differentiating-dominating sets in graphs under binary operations},
     author = {S. R. Canoy, Jr. and G. A. Malacas},
@@ -1526,22 +1632,6 @@
     journal = {Fault Tolerant Parallel and Distributed Systems},
     year = {1998},
     pages = {285--301}
-}
-@article{chan14,
-    title = {Choice identification of a graph},
-    author = {T. P. Chang and L. D. Tong},
-    journal = {Discrete Applied Mathematics},
-    year = {2014},
-    pages = {61--71},
-    volume = {167}
-}
-@article{Echa06,
-    title = {Discriminating codes in bipartite graphs},
-    author = {E. Charbit and I. Charon and G. Cohen and O. Hudry},
-    journal = {Electronic Notes in Discrete Mathematics},
-    year = {2006},
-    pages = {29--35},
-    volume = {26}
 }
 @article{Echa09,
     title = {Discriminating codes in bipartite graphs: bounds, extremal cardinalities, complexity},
@@ -1624,15 +1714,6 @@
     year = {2014},
     pages = {157--170},
     volume = {6}
-}
-@article{char01b,
-    title = {Complexity of identifying and locating problems in graphs},
-    author = {I. Charon and O. Hudry and A. Lobstein},
-    journal = {Rapport interne T\'el\'ecom Paris-2001D013},
-    month = {October},
-    year = {2001},
-    pages = {36},
-    address = {Paris, France}
 }
 @article{char02a,
     title = {Identifying codes with small radius in some infinite regular graphs},
@@ -1870,14 +1951,6 @@
     year = {2017},
     pages = {1456--1466},
     volume = {340}
-}
-@article{cran09,
-    title = {A new lower bound on the density of vertex identifying codes for the infinite hexagonal grid},
-    author = {D. W. Cranston and G. Yu},
-    journal = {Electronic Journal of Combinatorics},
-    year = {2009},
-    volume = {16},
-    number = {1}
 }
 @article{dali14,
     title = {Criticality indices of locating-domination of paths and cycles},
@@ -2140,14 +2213,6 @@
     pages = {628--638},
     volume = {32}
 }
-@article{fouc16,
-    title = {Location-domination and matching in cubic graphs},
-    author = {F. Foucaud and M. A. Henning},
-    journal = {Discrete Mathematics},
-    year = {2016},
-    pages = {1221--1231},
-    volume = {339}
-}
 @article{fouc16z,
     title = {Locating-total dominating sets in twin-free graphs: a conjecture},
     author = {F. Foucaud and M. A. Henning},
@@ -2189,22 +2254,6 @@
     volume = {21},
     number = {6}
 }
-@article{fouc11b,
-    title = {On the size of identifying codes in triangle-free graphs},
-    author = {F. Foucaud and R. Klasing and A. Kosowski and A. Raspaud},
-    journal = {Discrete Applied Mathematics},
-    year = {2012},
-    pages = {1532--1546},
-    volume = {160}
-}
-@article{fouc13c,
-    title = {Identifying path covers in graphs},
-    author = {F. Foucaud and M. Kov$\check{\textrm{s}}$e},
-    journal = {Journal of Discrete Algorithms},
-    year = {2013},
-    pages = {21--34},
-    volume = {23}
-}
 @article{fouc13,
     title = {An improved lower bound for $(1, \leq 2)$-identifying codes in the king grid},
     author = {F. Foucaud and T. Laihonen and A. Parreau},
@@ -2228,14 +2277,6 @@
     year = {2017},
     pages = {43--58},
     volume = {668}
-}
-@article{fouc11,
-    title = {Characterizing extremal digraphs for identifying codes and extremal cases of Bondy's theorem on induced subsets},
-    author = {F. Foucaud and R. Naserasr and and A. Parreau},
-    journal = {Graphs and Combinatorics},
-    year = {2013},
-    pages = {463--473},
-    volume = {29}
 }
 @article{fouc17x,
     title = {Random subgraphs make identification affordable},
@@ -2381,14 +2422,6 @@
     pages = {432--434},
     volume = {307}
 }
-@article{grav04b,
-    title = {Identifying codes of cycles},
-    author = {S. Gravier and J. Moncel and A. Semri},
-    journal = {European Journal of Combinatorics},
-    year = {2006},
-    pages = {767--776},
-    volume = {27}
-}
 @article{grav16,
     title = {Identifying codes in vertex-transitive graphs and strongly regular graphs},
     author = {S. Gravier and A. Parreau and S. Rottay and L. Storme and E. Vandomme},
@@ -2404,14 +2437,6 @@
     year = {2022},
     pages = {377--394},
     volume = {17}
-}
-@article{haka20k,
-    title = {The solid-metric dimension},
-    author = {A. Hakanen and V. Junnila and T. Laihonen},
-    journal = {Theoretical Computer Science},
-    year = {2020},
-    pages = {156--170},
-    volume = {806}
 }
 @article{haka22A,
     title = {On vertices contained in all or in no metric basis},
@@ -2476,22 +2501,6 @@
     year = {2006},
     pages = {1293--1300},
     volume = {154}
-}
-@article{hede15,
-    title = {On identifying codes in the Cartesian product of a path and a complete graph},
-    author = {J. Hedetniemi},
-    journal = {Journal of Combinatorial Optimization},
-    year = {2016},
-    pages = {1405--1416},
-    volume = {31}
-}
-@article{henn04,
-    title = {Metric-locating-dominating sets in graphs},
-    author = {M. A. Henning and O. R. Oellermann},
-    journal = {Ars Combinatoria},
-    year = {2004},
-    pages = {129--141},
-    volume = {73}
 }
 @article{henn12b,
     title = {Locating-total domination in graphs},
@@ -2602,14 +2611,6 @@
     year = {2003},
     pages = {409--419},
     volume = {129}
-}
-@article{honk03b,
-    title = {On the identification of sets of points in the square lattice},
-    author = {I. Honkala and T. Laihonen},
-    journal = {Discrete and Computational Geometry},
-    year = {2003},
-    pages = {139--152},
-    volume = {29}
 }
 @article{honk03c,
     title = {On identification of sets of vertices in the triangular grid},
@@ -2852,13 +2853,6 @@
     year = {2016},
     pages = {176--179},
     address = {Bordeaux, France}
-}
-@article{junn20o,
-    title = {Tolerant location detection in sensor networks},
-    author = {V. Junnila and T. Laihonen},
-    journal = {Advances in Applied Mathematics},
-    year = {2020},
-    volume = {112}
 }
 @article{junn21q,
     title = {On Levenshtein's channel and list size in information retrieval},
@@ -4217,6 +4211,17 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
 @inproceedings{argi14a,
     title = {On identifying code polyhedra of families of suns},
     author = {G. R. Argiroffo and S. M. Bianchi and A. K. Wagler},
@@ -4432,4 +4437,38 @@
     year = {2021},
     pages = {233--244},
     volume = {116}
+}
+@article{henn04,
+    title = {Metric-locating-dominating sets in graphs},
+    author = {M. A. Henning and O. R. Oellermann},
+    journal = {Ars Combinatoria},
+    year = {2004},
+    pages = {129--141},
+    volume = {73}
+}
+@article{cano13,
+    title = {Determining the intruders location in a given network: Locating-dominating sets in a graph},
+    author = {S. R. Canoy, Jr. and G. A. Malacas},
+    journal = {NCRP Research Journal},
+    year = {2013},
+    pages = {1--8},
+    volume = {13},
+    number = {1}
+}
+@article{char01b,
+    title = {Complexity of identifying and locating problems in graphs},
+    author = {I. Charon and O. Hudry and A. Lobstein},
+    journal = {Rapport interne T\'el\'ecom Paris-2001D013},
+    month = {October},
+    year = {2001},
+    pages = {36},
+    address = {Paris, France}
+}
+@article{cran09,
+    title = {A new lower bound on the density of vertex identifying codes for the infinite hexagonal grid},
+    author = {D. W. Cranston and G. Yu},
+    journal = {Electronic Journal of Combinatorics},
+    year = {2009},
+    volume = {16},
+    number = {1}
 }
