--- a/refs.bib
+++ b/refs.bib
@@ -1072,6 +1072,155 @@
     volume = {31},
     doi = {10.1007/s10878-015-9830-9}
 }
+@article{blas99a,
+    title = {On the size of identifying codes},
+    author = {U. Blass and I. Honkala and S. Litsyn},
+    journal = {Lecture Notes in Computer Science},
+    year = {1999},
+    publisher = {Springer-Verlag},
+    pages = {142--147},
+    doi = {10.1007/3-540-46796-3_14}
+}
+@article{cohe18k,
+    title = {Spy-game on graphs: complexity and simple topologies},
+    author = {N. Cohen and N. A. Martins and F. Mc inerney and N. Nisse and S. P\'e\-rennes and R. Sampaio},
+    journal = {Theoretical Computer Science},
+    year = {2018},
+    pages = {1--15},
+    volume = {725},
+    doi = {10.1016/j.tcs.2017.11.015}
+}
+@article{hayn98a,
+    title = {Fundamentals of Domination in Graphs},
+    author = {T. W. Haynes and S. T. Hedetniemi and P. J. Slater},
+    journal = {CRC press},
+    publisher = {Marcel Dekker},
+    year = {1998},
+    address = {New York, New York},
+    doi = {10.1201/9781482246582}
+}
+@article{blas00a,
+    title = {On binary codes for identification},
+    author = {U. Blass and I. Honkala and S. Litsyn},
+    journal = {Journal of Combinatorial Designs},
+    year = {2000},
+    pages = {151--156},
+    volume = {8},
+    doi = {10.1002/(SICI)1520-6610(2000)8:2\%3C151::AID-JCD8\%3E3.0.CO;2-S}
+}
+@article{junn15a,
+    title = {Codes for information retrieval with small uncertainty},
+    author = {V. Junnila and T. Laihonen},
+    journal = {IEEE Transactions on Information Theory},
+    year = {2014},
+    pages = {976--985},
+    volume = {IT-60},
+    doi = {10.1109/TIT.2013.2290045}
+}
+@article{fouc17,
+    title = {Location-domination in line graphs},
+    author = {F. Foucaud and M. A. Henning},
+    journal = {Discrete Mathematics},
+    year = {2017},
+    pages = {3140--3153},
+    volume = {340},
+    doi = {10.1016/j.disc.2016.05.020}
+}
+@article{coup17,
+    title = {Extension of universal cycles for globally identifying colorings of cycles},
+    author = {P. Coupechoux},
+    journal = {Discrete Mathematics},
+    year = {2017},
+    pages = {1456--1466},
+    volume = {340},
+    doi = {10.1016/j.disc.2017.02.002}
+}
+@article{fazl12,
+    title = {Connected identifying codes},
+    author = {N. Fazlollahi and D. Starobinski and A. Trachtenberg},
+    journal = {IEEE Transactions on Information Theory},
+    year = {2012},
+    pages = {4814--4824},
+    volume = {IT-58},
+    doi = {10.1109/TIT.2012.2191934}
+}
+@article{fouc13,
+    title = {An improved lower bound for $(1, \leq 2)$-identifying codes in the king grid},
+    author = {F. Foucaud and T. Laihonen and A. Parreau},
+    journal = {Advances in Mathematics of Communications},
+    year = {2014},
+    pages = {35--52},
+    volume = {8},
+    doi = {10.3934/amc.2014.8.35}
+}
+@article{hudr18a,
+    title = {Unique (optimal) solutions: Complexity results for identifying and locating-dominating codes},
+    author = {O. Hudry and A. Lobstein},
+    journal = {Theoretical Computer Science},
+    year = {2019},
+    pages = {83--102},
+    volume = {767},
+    doi = {10.1016/j.tcs.2018.09.034}
+}
+@article{honk04d,
+    title = {On identifying codes in the triangular and square grids},
+    author = {I. Honkala and T. Laihonen},
+    journal = {SIAM Journal on Computing},
+    year = {2004},
+    pages = {304--312},
+    volume = {33},
+    doi = {10.1137/S0097539703433110}
+}
+@article{junn15b,
+    title = {Information retrieval with unambiguous output},
+    author = {V. Junnila and T. Laihonen},
+    journal = {Information and Computation},
+    year = {2015},
+    pages = {354--368},
+    volume = {242},
+    doi = {10.1016/j.ic.2015.04.002}
+}
+@article{bouz12a,
+    title = {Generic algorithms for some decision problems on fasciagraphs and rotagraphs},
+    author = {M. Bouznif and J. Moncel and M. Preissmann},
+    journal = {Discrete Mathematics},
+    year = {2012},
+    pages = {2707--2719},
+    volume = {312},
+    doi = {10.1016/j.disc.2012.02.013}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1421,22 +1570,6 @@
     pages = {21--35},
     volume = {31}
 }
-@article{blas99a,
-    title = {On the size of identifying codes},
-    author = {U. Blass and I. Honkala and S. Litsyn},
-    journal = {Lecture Notes in Computer Science},
-    year = {1999},
-    publisher = {Springer-Verlag},
-    pages = {142--147}
-}
-@article{blas00a,
-    title = {On binary codes for identification},
-    author = {U. Blass and I. Honkala and S. Litsyn},
-    journal = {Journal of Combinatorial Designs},
-    year = {2000},
-    pages = {151--156},
-    volume = {8}
-}
 @article{blas01a,
     title = {Bounds on identifying codes},
     author = {U. Blass and I. Honkala and S. Litsyn},
@@ -1476,14 +1609,6 @@
     year = {2014},
     pages = {303--313},
     volume = {94}
-}
-@article{blid08,
-    title = {Locating-domination, 2-domination and independence in trees},
-    author = {M. Blidia and O. Favaron and R. Lounes},
-    journal = {Australasian Journal of Combinatorics},
-    year = {2008},
-    pages = {309--316},
-    volume = {42}
 }
 @article{blid09,
     title = {Vertices belonging to all or to no minimum locating dominating sets of trees},
@@ -1543,14 +1668,6 @@
     year = {2016},
     publisher = {Springer-Verlag},
     pages = {77--88}
-}
-@article{bouz12a,
-    title = {Generic algorithms for some decision problems on fasciagraphs and rotagraphs},
-    author = {M. Bouznif and J. Moncel and M. Preissmann},
-    journal = {Discrete Mathematics},
-    year = {2012},
-    pages = {2707--2719},
-    volume = {312}
 }
 @article{cace10,
     title = {On the determining number and the metric dimension of graphs},
@@ -1861,14 +1978,6 @@
     pages = {223--235},
     volume = {30}
 }
-@article{chel09,
-    title = {Locating-total domination critical graphs},
-    author = {M. Chellali and N. J. Rad},
-    journal = {Australasian Journal of Combinatorics},
-    year = {2009},
-    pages = {227--234},
-    volume = {45}
-}
 @article{chel14,
     title = {On open neighborhood locating-dominating in graphs},
     author = {M. Chellali and N. J. Rad and S. J. Seo and P. J. Slater},
@@ -1918,47 +2027,6 @@
     year = {1999},
     pages = {19--22},
     address = {Roscoff, France}
-}
-@article{cohe18,
-    title = {On the minimum size of an identifying code over all orientations of a graph},
-    author = {N. Cohen and F. Havet},
-    journal = {Electronic Journal of Combinatorics},
-    year = {2018},
-    volume = {25},
-    number = {1},
-    pages = {23}
-}
-@article{cohe18k,
-    title = {Spy-game on graphs: complexity and simple topologies},
-    author = {N. Cohen and N. A. Martins and F. Mc inerney and N. Nisse and S. P\'e\-rennes and R. Sampaio},
-    journal = {Theoretical Computer Science},
-    year = {2018},
-    pages = {1--15},
-    volume = {725}
-}
-@article{colb87a,
-    title = {Locating dominating sets in series parallel networks},
-    author = {C. J. Colbourn and P. J. Slater and L. K. Stewart},
-    journal = {Congressus Numerantium},
-    year = {1987},
-    pages = {135--162},
-    volume = {56}
-}
-@article{coup17,
-    title = {Extension of universal cycles for globally identifying colorings of cycles},
-    author = {P. Coupechoux},
-    journal = {Discrete Mathematics},
-    year = {2017},
-    pages = {1456--1466},
-    volume = {340}
-}
-@article{dali14,
-    title = {Criticality indices of locating-domination of paths and cycles},
-    author = {W. Dali and M. Blidia},
-    journal = {Utilitas Mathematica},
-    year = {2014},
-    pages = {199--219},
-    volume = {94}
 }
 @article{dali14b,
     title = {On locating and locating-total domination edge addition critical graphs},
@@ -2064,14 +2132,6 @@
     pages = {177--194},
     volume = {49}
 }
-@article{exoo08d,
-    title = {Locating vertices using codes},
-    author = {G. Exoo and V. Junnila and T. Laihonen and S. Ranto},
-    journal = {Congressus Numerantium},
-    year = {2008},
-    pages = {143--159},
-    volume = {191}
-}
 @article{exoo08c,
     title = {Upper bounds for binary identifying codes},
     author = {G. Exoo and V. Junnila and T. Laihonen and S. Ranto},
@@ -2118,14 +2178,6 @@
     year = {2016},
     pages = {224--234},
     volume = {72}
-}
-@article{fazl12,
-    title = {Connected identifying codes},
-    author = {N. Fazlollahi and D. Starobinski and A. Trachtenberg},
-    journal = {IEEE Transactions on Information Theory},
-    year = {2012},
-    pages = {4814--4824},
-    volume = {IT-58}
 }
 @article{feng22,
     title = {Optimal identifying codes of two families of Cayley graphs},
@@ -2221,14 +2273,6 @@
     volume = {23},
     number = {3}
 }
-@article{fouc17,
-    title = {Location-domination in line graphs},
-    author = {F. Foucaud and M. A. Henning},
-    journal = {Discrete Mathematics},
-    year = {2017},
-    pages = {3140--3153},
-    volume = {340}
-}
 @article{fouc16a,
     title = {Locating-dominating sets in twin-free graphs},
     author = {F. Foucaud and M. A. Henning and C. L\"{o}wenstein and T. Sasse},
@@ -2253,14 +2297,6 @@
     pages = {1039--1056},
     volume = {21},
     number = {6}
-}
-@article{fouc13,
-    title = {An improved lower bound for $(1, \leq 2)$-identifying codes in the king grid},
-    author = {F. Foucaud and T. Laihonen and A. Parreau},
-    journal = {Advances in Mathematics of Communications},
-    year = {2014},
-    pages = {35--52},
-    volume = {8}
 }
 @article{fouc16b,
     title = {Algorithms and complexity for metric dimension and location-domination on interval and permutation graphs},
@@ -2486,14 +2522,6 @@
     pages = {246--256},
     volume = {95}
 }
-@article{hayn98a,
-    title = {Fundamentals of Domination in Graphs},
-    author = {T. W. Haynes and S. T. Hedetniemi and P. J. Slater},
-    journal = {CRC press},
-    publisher = {Marcel Dekker},
-    year = {1998},
-    address = {New York, New York}
-}
 @article{hayn06,
     title = {Locating and total dominating sets in trees},
     author = {T. W. Haynes and M. A. Henning and J. Howard},
@@ -2587,15 +2615,6 @@
     pages = {303--323},
     volume = {8}
 }
-@article{honk06b,
-    title = {On 2-edge-robust $r$-identifying codes in the king grid},
-    author = {I. Honkala},
-    journal = {Australasian Journal of Combinatorics},
-    year = {2006},
-    pages = {151--165},
-    volume = {36},
-    howpublished = {\url{https://ajc.maths.uq.edu.au/pdf/36/ajc_v36_p151.pdf}}
-}
 @article{honk06f,
     title = {On robust and dynamic identifying codes},
     author = {I. Honkala and M. G. Karpovsky and L. B. Levitin},
@@ -2627,14 +2646,6 @@
     year = {2004},
     pages = {9--14},
     volume = {89}
-}
-@article{honk04d,
-    title = {On identifying codes in the triangular and square grids},
-    author = {I. Honkala and T. Laihonen},
-    journal = {SIAM Journal on Computing},
-    year = {2004},
-    pages = {304--312},
-    volume = {33}
 }
 @article{honk06c,
     title = {On identifying codes in the king grid that are robust against edge deletions},
@@ -2726,14 +2737,6 @@
     pages = {732--746},
     volume = {26}
 }
-@article{hudr18a,
-    title = {Unique (optimal) solutions: Complexity results for identifying and locating-dominating codes},
-    author = {O. Hudry and A. Lobstein},
-    journal = {Theoretical Computer Science},
-    year = {2019},
-    pages = {83--102},
-    volume = {767}
-}
 @article{inay21,
     title = {The locating chromatic number of book graph},
     author = {N. Inayah and W. Aribowo and M. M. Windra yahya},
@@ -2820,22 +2823,6 @@
     year = {2013},
     pages = {1636--1647},
     volume = {313}
-}
-@article{junn15a,
-    title = {Codes for information retrieval with small uncertainty},
-    author = {V. Junnila and T. Laihonen},
-    journal = {IEEE Transactions on Information Theory},
-    year = {2014},
-    pages = {976--985},
-    volume = {IT-60}
-}
-@article{junn15b,
-    title = {Information retrieval with unambiguous output},
-    author = {V. Junnila and T. Laihonen},
-    journal = {Information and Computation},
-    year = {2015},
-    pages = {354--368},
-    volume = {242}
 }
 @article{junn16a,
     title = {Minimum number of input clues in robust information retrieval},
@@ -3065,14 +3052,6 @@
     pages = {694--700},
     volume = {116},
     number = {11}
-}
-@article{laih17,
-    title = {Information retrieval and the average number of input clues},
-    author = {T. Laihonen},
-    journal = {Advances in Mathematics of Communications},
-    year = {2017},
-    pages = {203--223},
-    volume = {11}
 }
 @article{laih19q,
     title = {On $t$-revealing codes in binary Hamming spaces},
@@ -3773,14 +3752,6 @@
     pages = {89--100},
     volume = {65}
 }
-@article{seo13,
-    title = {Open locating-dominating interpolation for trees},
-    author = {S. J. Seo and P. J. Slater},
-    journal = {Congressus Numerantium},
-    year = {2013},
-    pages = {145--152},
-    volume = {215}
-}
 @article{seo14,
     title = {OLD trees with maximum degree three},
     author = {S. J. Seo and P. J. Slater},
@@ -4471,4 +4442,78 @@
     year = {2009},
     volume = {16},
     number = {1}
+}
+@article{exoo08d,
+    title = {Locating vertices using codes},
+    author = {G. Exoo and V. Junnila and T. Laihonen and S. Ranto},
+    journal = {Congressus Numerantium},
+    year = {2008},
+    pages = {143--159},
+    volume = {191}
+}
+@article{blid08,
+    title = {Locating-domination, 2-domination and independence in trees},
+    author = {M. Blidia and O. Favaron and R. Lounes},
+    journal = {Australasian Journal of Combinatorics},
+    year = {2008},
+    pages = {309--316},
+    volume = {42}
+}
+@article{seo13,
+    title = {Open locating-dominating interpolation for trees},
+    author = {S. J. Seo and P. J. Slater},
+    journal = {Congressus Numerantium},
+    year = {2013},
+    pages = {145--152},
+    volume = {215}
+}
+@article{colb87a,
+    title = {Locating dominating sets in series parallel networks},
+    author = {C. J. Colbourn and P. J. Slater and L. K. Stewart},
+    journal = {Congressus Numerantium},
+    year = {1987},
+    pages = {135--162},
+    volume = {56}
+}
+@article{cohe18,
+    title = {On the minimum size of an identifying code over all orientations of a graph},
+    author = {N. Cohen and F. Havet},
+    journal = {Electronic Journal of Combinatorics},
+    year = {2018},
+    volume = {25},
+    number = {1},
+    pages = {23}
+}
+@article{honk06b,
+    title = {On 2-edge-robust $r$-identifying codes in the king grid},
+    author = {I. Honkala},
+    journal = {Australasian Journal of Combinatorics},
+    year = {2006},
+    pages = {151--165},
+    volume = {36},
+    howpublished = {\url{https://ajc.maths.uq.edu.au/pdf/36/ajc_v36_p151.pdf}}
+}
+@article{dali14,
+    title = {Criticality indices of locating-domination of paths and cycles},
+    author = {W. Dali and M. Blidia},
+    journal = {Utilitas Mathematica},
+    year = {2014},
+    pages = {199--219},
+    volume = {94}
+}
+@article{laih17,
+    title = {Information retrieval and the average number of input clues},
+    author = {T. Laihonen},
+    journal = {Advances in Mathematics of Communications},
+    year = {2017},
+    pages = {203--223},
+    volume = {11}
+}
+@article{chel09,
+    title = {Locating-total domination critical graphs},
+    author = {M. Chellali and N. J. Rad},
+    journal = {Australasian Journal of Combinatorics},
+    year = {2009},
+    pages = {227--234},
+    volume = {45}
 }
