--- a/refs.bib
+++ b/refs.bib
@@ -1189,7 +1189,26 @@
     volume = {312},
     doi = {10.1016/j.disc.2012.02.013}
 }
-
+@article{sout10a,
+    title = {On a conjecture on total domination in claw-free cubic graphs},
+    journal = {Discrete Mathematics},
+    volume = {310},
+    number = {21},
+    pages = {2984--2999},
+    year = {2010},
+    issn = {0012-365X},
+    doi = {10.1016/j.disc.2010.07.006},
+    author = {Justin Southey and Michael A. Henning}
+}
+@article{henn13,
+    title = {Distinguishing-transversal in hypergraphs and identifying open codes in cubic graphs},
+    author = {M. A. Henning and A. Yeo},
+    journal = {Graphs and Combinatorics},
+    year = {2014},
+    pages = {909--932},
+    volume = {30},
+    doi = {10.1007/s00373-013-1311-2}
+}
 
 
 
@@ -2545,14 +2564,6 @@
     year = {2012},
     volume = {19},
     number = {4}
-}
-@article{henn13,
-    title = {Distinguishing-transversal in hypergraphs and identifying open codes in cubic graphs},
-    author = {M. A. Henning and A. Yeo},
-    journal = {Graphs and Combinatorics},
-    year = {2014},
-    pages = {909--932},
-    volume = {30}
 }
 @article{hern15,
     title = {On global location-domination in graphs},
