--- a/refs.bib
+++ b/refs.bib
@@ -4528,3 +4528,11 @@
     pages = {227--234},
     volume = {45}
 }
+@article{seo18a,
+    title = {{Generalized set dominating and separating systems}},
+    author = {S. J. Seo and P. J. Slater},
+    journal = {{Journal of Combinatorial Mathematics and Combinatorial Computing}},
+    volume = {104},
+    pages = {15--29},
+    year = {2018}
+}
