--- a/refs.bib
+++ b/refs.bib
@@ -438,15 +438,6 @@
     volume = {8},
     doi = {10.1007/s12095-015-0148-3}
 }
-@article{jeanAP1,
-    title = {{Fault-tolerant identifying codes in special classes of graphs}},
-    author = {D. C. Jean and S. J. Seo},
-    journal = {{Discussiones Mathematicae Graph Theory}},
-    year = {2022},
-    pages = {21},
-    doi = {10.7151/dmgt.2465},
-    note = {to appear}
-}
 @article{song22,
     title = {{Locating and identifying codes in dihedral graphs}},
     author = {S. J. Song and X. Ning and P. Cheng},
@@ -681,15 +672,6 @@
     address = {Bordeaux, France},
     doi = {10.11650/tjm.19.2015.4816}
 }
-@article{jean22,
-    title = {{Extremal cubic graphs for fault-tolerant locating domination}},
-    author = {D. C. Jean and S. J. Seo},
-    journal = {{Theoretical Computer Science}},
-    year = {2022},
-    pages = {94--106},
-    volume = {917},
-    doi = {10.1016/j.tcs.2022.03.014}
-}
 @article{lai15,
     title = {{Paths and cycles identifying vertices in twisted cubes}},
     author = {P. L. Lai},
@@ -698,35 +680,6 @@
     pages = {620--627},
     volume = {259},
     doi = {10.1016/j.amc.2015.02.090}
-}
-@article{jean23,
-    title = {{Optimal error-detecting open-locating-dominating set on the infinite triangular grid}},
-    author = {D. C. Jean and S. J. Seo},
-    journal = {{Discussiones Mathematicae Graph Theory}},
-    year = {2023},
-    pages = {445--455},
-    volume = {43},
-    number = {2},
-    doi = {10.7151/dmgt.2374}
-}
-@article{jeanAP2,
-    title = {{Progress on fault-tolerant locating-dominating sets}},
-    author = {D. C. Jean and S. J. Seo},
-    journal = {{Discrete Mathematics, Algorithms and Applications}},
-    volume = {15},
-    number = {2},
-    pages = {14},
-    year = {2023},
-    doi = {10.1142/S179383092250080X}
-}
-@article{jeanDAM23,
-    title = {{On Redundant Locating-Dominating Sets}},
-    author = {D. C. Jean and S. J. Seo},
-    journal = {{Discrete Applied Mathematics}},
-    volume = {329},
-    year = {2023},
-    pages = {106--125},
-    doi = {10.1016/j.dam.2023.01.023}
 }
 @article{honk02d,
     title = {{On strongly identifying codes}},
@@ -4522,4 +4475,52 @@
     volume = {104},
     pages = {15--29},
     year = {2018}
+}
+@article{jean22,
+    title = {{Extremal cubic graphs for fault-tolerant locating domination}},
+    author = {D. C. Jean and S. J. Seo},
+    journal = {{Theoretical Computer Science}},
+    year = {2022},
+    pages = {94--106},
+    volume = {917},
+    doi = {10.1016/j.tcs.2022.03.014}
+}
+@article{jean23,
+    title = {{Optimal error-detecting open-locating-dominating set on the infinite triangular grid}},
+    author = {D. C. Jean and S. J. Seo},
+    journal = {{Discussiones Mathematicae Graph Theory}},
+    year = {2023},
+    pages = {445--455},
+    volume = {43},
+    number = {2},
+    doi = {10.7151/dmgt.2374}
+}
+@article{jean23a,
+    title = {{Progress on fault-tolerant locating-dominating sets}},
+    author = {D. C. Jean and S. J. Seo},
+    journal = {{Discrete Mathematics, Algorithms and Applications}},
+    volume = {15},
+    number = {2},
+    pages = {14},
+    year = {2023},
+    doi = {10.1142/S179383092250080X}
+}
+@article{jean23b,
+    title = {{On Redundant Locating-Dominating Sets}},
+    author = {D. C. Jean and S. J. Seo},
+    journal = {{Discrete Applied Mathematics}},
+    volume = {329},
+    year = {2023},
+    pages = {106--125},
+    doi = {10.1016/j.dam.2023.01.023}
+}
+@article{jean24,
+    title = {{Fault-Tolerant Identifying Codes in Special Classes of Graphs}},
+    author = {D. C. Jean and S. J. Seo},
+    journal = {{Discrete Mathematics, Algorithms and Applications}},
+    volume = {44},
+    number = {2},
+    year = {2024},
+    pages = {591--611},
+    doi = {10.7151/dmgt.2465}
 }
