--- a/refs.bib
+++ b/refs.bib
@@ -4517,7 +4517,7 @@
 @article{jean24,
     title = {{Fault-Tolerant Identifying Codes in Special Classes of Graphs}},
     author = {D. C. Jean and S. J. Seo},
-    journal = {{Discrete Mathematics, Algorithms and Applications}},
+    journal = {{Discussiones Mathematicae Graph Theory}},
     volume = {44},
     number = {2},
     year = {2024},
